--- a/client/simple-web-application/src/styles/App.css
+++ b/client/simple-web-application/src/styles/App.css
@@ -10,13 +10,25 @@
 .btn-login {
   background-color: #3e4684;
   color: white;
-  margin: auto;
+
+  
+  /* display: inline-block; */
+  /* outline: none; */
+  /* font-size: 14px; */
+  border-radius: 30px;
+  border: 1px solid transparent;
+  letter-spacing: 2px;
+  /* min-width: 160px; */
+  text-transform: uppercase;
+  font-weight: 700;
+  /* text-align: center; */
+  /* height: 48px; */
+  padding: 12px;
 }
 
-.btn-login:hover {
-  opacity: 0.8
+.btn-login:hover{
+  opacity: 0.8;
 }
-
 
 .App {
   text-align: center;
