--- a/client/simple-web-application/src/styles/App.css
+++ b/client/simple-web-application/src/styles/App.css
@@ -1,17 +1,10 @@
-.bg-color {
-  background: #dde5f4; /* Replace #FF0000 with your desired hex code */
-}
-
-.bg-form{
-  background: #f1f7fe;
+.border-radius {
   border-radius: 30px;
 }
 
 .btn-login {
   background-color: #3e4684;
-  color: white;
-
-  
+  color: white; 
   /* display: inline-block; */
   /* outline: none; */
   /* font-size: 14px; */
@@ -26,45 +19,7 @@
   padding: 12px;
 }
 
-.btn-login:hover{
-  opacity: 0.8;
-}
-
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.gradient-custom-3 {
+  /* fallback for old browsers */
+  background:#dde5f4;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
