--- a/client/simple-web-application/src/styles/App.css
+++ b/client/simple-web-application/src/styles/App.css
@@ -60,7 +60,7 @@
   padding: 0.8rem;
 }
 
-.label{
+/* .label{
   border-radius: 3px;
   padding: 0.3rem;
   color: white;
@@ -85,7 +85,7 @@
 
 .delete-btn{
   color: #e10d05;
-}
+} */
 
 .custom-right-padding{
   padding-right: 20px;
